@@ -1,3 +1,10 @@
+2008-02-21  Jason Xia  <jasonxh@gmail.com>
+
+	* src/mainframe.h, src/mainframe.cpp
+	(CMainFrame::m_JumpMenuItems) (CMainFrame::OnJumpToPage)
+	(CMainFrame::MakeUI): Fix unusable JumpToPage hotkeys(ALT+NUM) in
+	full-screen mode.
+
 2008-02-20  Jim Huang  <jserv.tw@gmail.com>
 
 	* src/mainframe.h
